2002-09-05  Person or Persons Unknown  <damned@theworld.com>

	* Release v1.1.2:

	* News:
	* configure.in:
	New version.

	* tests/MAPI_ATTACH_DATA_OBJ.tnef: new test file for bug fixed.

2002-09-03  Person or Persons Unknown  <damned@theworld.com>

	* src/tnef.c (file_add_mapi_attrs): Fixing bug found by Asbjorn
	Pettersen <AsbjornPettersen@dualog.no>.  This bug occurs when
	MAPI_ATTACH_DATA_OBJ is where the data for the file is defined
	instead of attATTACHDATA;

	* src/tnef.c: Removal of unecessary unistd.h
	(courtesy of Asbjorn Pettersen <AsbjornPettersen@dualog.no>)
	
	* <misc files>
	Updated copyright statements.  Misc changes for newer version of
	automake/autoconf &c.

2001-09-18  Person or Persons Unknown  <damned@world.std.com>

        * Release v1.1.1:

	* NEWS:
	* configure.in:
	New version.
	
	* tnef.spec.in: Small improvements.

	* doc/Makefile.am, doc/tnef.1: man page renamed to tnef.1 to put
	it into the correct manual page section.

	* src/strdup.c (strdup): Fixing off by one error.

2001-08-13  Mark Simpson  <damned@world.std.com>

	* Release v1.1:

	* NEWS:
	* configure.in:
	New version.

	* src/main.c: Disallowing -w with reading a file from stdin.
	
	* src/alloc.c (MALLOC): 
	Modified to not produce error if size is zero.  Some libc
	libraries return NULL if size is zero.

	* doc/Makefile.am:
	* doc/tnef.3: 
	New file courtesy Clark Morgan <cmorgan@aracnet.com> 

2001-07-17  Mark Simpson  <damned@world.std.com>

	* configure.in: 
	Checking for ldiv.

	* tnef.spec.in: 
	Cleanup and addition of doc.

	* src/ldiv.c, src/ldiv.h:
	New files to be compiled if ldiv is not defined.

	* src/tnef.c: 
	Cleaning up a few memory leaks.

2001-04-07  Person or Persons Unknown  <damned@world.std.com>

	* Release 1.0.1:
	
	* NEWS:
	* configure.in:
	New version.

	* src/tnef.c:
	Fixing problem with directory usage.  When a
	MAPI_ATTACH_LONG_FILENAME is found TNEF must prepend the directory
	to it just like when it finds a attATTACHTITLE.
