@@ -5,11 +5,11 @@ EXTRA_DIST	=	alloc.h			\
 			mapi-types.data		\
 			mapi-names.data		\
 			mkdata.awk		\
-			names.data		\
 			path.h			\
 			sizes.h			\
 			strdup.h		\
-			types.data 
+			tnef-names.data		\
+			tnef-types.data 
 bin_PROGRAMS	=	tnef
 tnef_SOURCES	=	alloc.c main.c path.c tnef.c tnef.h
 BUILT_SOURCES	=	tnef_names.c tnef_names.h	\
@@ -28,12 +28,12 @@ MOSTLYCLEANFILES=	tnef_names.c tnef_names.h	\
 tnef.o:	tnef.h
 tnef.h: sizes.h
 $(tnef_OBJECTS): $(BUILT_OBJS)
-tnef_names.c tnef_names.h: names.data mkdata.awk
+tnef_names.c tnef_names.h: tnef-names.data mkdata.awk
 	$(SHELL) -c 'TAG=tnef_name $(AWK) -f $(srcdir)/mkdata.awk \
-			$(srcdir)/names.data'
-tnef_types.c tnef_types.h: types.data mkdata.awk
+			$(srcdir)/tnef-names.data'
+tnef_types.c tnef_types.h: tnef-types.data mkdata.awk
 	$(SHELL) -c 'TAG=tnef_type $(AWK) -f $(srcdir)/mkdata.awk \
-			$(srcdir)/types.data'
+			$(srcdir)/tnef-types.data'
 mapi_types.c mapi_types.h: mapi-types.data mkdata.awk
 	$(SHELL) -c 'TAG=mapi_type $(AWK) -f $(srcdir)/mkdata.awk \
 			$(srcdir)/mapi-types.data'
